Web Design Rules: Colors and Images

--- a/design.html
+++ b/design.html
@@ -47,7 +47,7 @@
     -> For any text, don't go below 400 font-weight
     
     READING EXPERIENCE
-    -> use les than 75 characters per line
+    -> use less than 75 characters per line
     -> normal line-height: 1.5 - 2; larger: below 1.5
     -> The smaller and longer the text, the larger the line height
     -> decrease letter spacing in headline
@@ -55,5 +55,32 @@
     -> don't justify text
     -> don't center long text blocks
 
+  2. COLORS
+    -> choose the right color, it should match the website personality
+    -> use a good color tone (Open color / tailwindcss / flat ui colors)
+    -> you need two types: main color and a grey color; you may also add an accent color (palleton / coolors)
+    -> create lighter (tint) and shades (darker) versions of the colors (tint and shade generator)
+    -> use your main color to draw attention to the most important elements on the page
+  
+    COLORS AND TYPOGRAPHY
+    -> on a dark colored backgrounds, use a tint of the background for text color
+    -> text should not be completely black
+    -> don't make text too light for accessibility; contrast ratio should be at least 4.5:1 for normal text, and 3:1 for large text (18px+)
+  
+  3. IMAGES
+    -> you may use product photos, storytelling photos, illustrations and patterns
+    -> use relevant images to support your website's message
+    -> prefer original images, or original-looking stock images (unsplash / pexels / drawkit / undraw)
+    -> to show real people to trigger user's emotions
+    -> crop images to fit your message
+
+    HANDLING TEXT ON IMAGES
+    -> method 1: darken or brigthen the image (using a gradient)
+    -> method 2: position text into a neutral image area
+    -> method 3: put text in a box
+
+    TECHNICAL DETAILS
+    -> for high-res screens, make image dimensions 2x big
+    -> compress images for a lower file size (squoosh)
 
 -->
