Web Design Rules: Icons and Shadows

--- a/design.html
+++ b/design.html
@@ -83,4 +83,33 @@
     -> for high-res screens, make image dimensions 2x big
     -> compress images for a lower file size (squoosh)
 
+  4. ICONS
+    -> use a good icon pack (phosphor icons / ionicons / icons8)
+    -> use only one icon pack and don't mix!
+    -> use icon fonts (SVG / vector based)
+    -> have to have similar roundness, weight and filled/outlined depending on the typography
+    -> provides visual assistance to text
+    -> used for product feature blocks
+    -> associated with actions as labels
+    -> icons can be used as bullet points
+
+    HOW TO USE ICONS WELL
+    -> to be neutral, use same color as text / more attention, use different color
+    -> don't make icons larger than what they were designed for / if needed, enclose them on a shape
+
+    5. SHADOWS
+    -> creates depth (3D), the more shadow, the further away from the interface the element
+    -> can be used on boxes and text
+    -> less shadow: serious/elegant / more shadow: playful/fun
+    -> use shadows in small doses; don't add shadows to every element
+    -> go light on shadows and don't make them too dark!
+    
+    WHEN TO USE SHADOWS
+    -> use small shadows for elements you want to draw attention to
+    -> use medium shadows for larger areas
+    -> use large shadows for elements that should really float
+    -> experiment with changing shadows upon click and hover
+    -> experiment with glows (colored shadows)
+
+
 -->
