--- a/design.html
+++ b/design.html
@@ -179,8 +179,13 @@
       6. Startup/Upbeat -> medium sans-serif / light-grey background / blue, green, or purple / for software startups / modern-looking company
       7. Playful/fun -> colorful and round or handwritten sans-serif / for child, food, and animal products
 
-    11. STEAL LIKE AN ARTIST
+  11. STEAL LIKE AN ARTIST
       -> do not completely copy, take the good parts and adapt them to your needs
       -> you can use sites like land-book / one page love / awwwards / screenlane
 
+  12. ELEMENTS, COMPONENTS, AND LAYOUTS
+      -> Elements -> Components -> Layout -> Webpage
+      -> use common elements and components to convey website's info
+      -> combine components into layouts using common layout patterns
+      -> 
 -->
