--- a/01-accordion.html
+++ b/01-accordion.html
@@ -43,23 +43,38 @@
       body {
         font-family: "Inter", sans-serif;
         color: #343a40;
-        border-bottom: 8px solid #087f5b;
         line-height: 1;
       }
 
       .accordion {
         width: 700px;
         margin: 100px auto;
+
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
       }
 
       .item {
+        box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
+        padding: 24px;
+
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        column-gap: 24px;
+        row-gap: 32px;
+        align-items: center;
       }
 
       .number,
       .text {
         font-size: 24px;
         font-weight: 500;
-        color: #087f5b;
+        /* color: #087f5b; */
+      }
+
+      .number {
+        color: #ced4da;
       }
 
       .icon {
@@ -67,7 +82,10 @@
         height: 24px;
         stroke: #087f5b;
       }
+
       .hidden-box {
+        grid-column: 2;
+        display: none;
       }
 
       .hidden-box p {
@@ -82,13 +100,28 @@
         flex-direction: column;
         gap: 12px;
       }
+
+      /* OPEN STATE */
+
+      .open {
+        border-top: 4px solid #087f5b;
+      }
+
+      .open .hidden-box {
+        display: block;
+      }
+
+      .open .number,
+      .open .text {
+        color: #087f5b;
+      }
     </style>
   </head>
   <body>
     <div class="accordion">
       <div class="item">
-        <p class="number">02</p>
-        <p class="text">How long do I have to return my chair</p>
+        <p class="number">01</p>
+        <p class="text">Where are these chairs assembled?</p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="icon"
@@ -111,22 +144,76 @@
             soluta omnis eveniet!
           </p>
           <ul>
-            <li>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Laboriosam, maiores.
-            </li>
-            <li>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Reiciendis, asperiores!
-            </li>
-            <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
-              obcaecati.
-            </li>
-            <li>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Recusandae, illum?
-            </li>
+            <li>Lorem ipsum dolor, adipisicing elit. Laboriosam, maiores.</li>
+            <li>Lorem ipsum dolor elit. Reiciendis, asperiores!</li>
+            <li>Lorem ipsum dolor sit amet. Alias, obcaecati.</li>
+            <li>Lorem ipsum dolor sit, elit. Recusandae, illum?</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="item open">
+        <p class="number">02</p>
+        <p class="text">How long do I have to return my chair?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M19 9l-7 7-7-7"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Voluptatibus mollitia enim nemo expedita esse fugiat quod. Minima,
+            ea ut nulla, iure libero magni tempore illum perspiciatis odit
+            soluta omnis eveniet!
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor, adipisicing elit. Laboriosam, maiores.</li>
+            <li>Lorem ipsum dolor elit. Reiciendis, asperiores!</li>
+            <li>Lorem ipsum dolor sit amet. Alias, obcaecati.</li>
+            <li>Lorem ipsum dolor sit, elit. Recusandae, illum?</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="item">
+        <p class="number">03</p>
+        <p class="text">Do you ship to countries outside the EU?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M19 9l-7 7-7-7"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Voluptatibus mollitia enim nemo expedita esse fugiat quod. Minima,
+            ea ut nulla, iure libero magni tempore illum perspiciatis odit
+            soluta omnis eveniet!
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor, adipisicing elit. Laboriosam, maiores.</li>
+            <li>Lorem ipsum dolor elit. Reiciendis, asperiores!</li>
+            <li>Lorem ipsum dolor sit amet. Alias, obcaecati.</li>
+            <li>Lorem ipsum dolor sit, elit. Recusandae, illum?</li>
           </ul>
         </div>
       </div>
