Component: Hero Section

--- a/design.html
+++ b/design.html
@@ -187,5 +187,8 @@
       -> Elements -> Components -> Layout -> Webpage
       -> use common elements and components to convey website's info
       -> combine components into layouts using common layout patterns
+  
+  13. LAYOUT PATTERNS
       -> 
+
 -->
